infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mon-service
spec:
  selector:
    app: mon-application
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
